--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate",
-    "migrate:deploy": "prisma migrate deploy"
+    "lint": "next lint"
   },
   "dependencies": {
     "@knight-lab/timelinejs": "^3.9.3",
