--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@knight-lab/timelinejs": "^3.9.3",
     "@next/third-parties": "^14.2.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.19",
     "cheerio": "^1.0.0-rc.12",
     "css-loader": "^7.1.2",
